# any-auth

./: .env.copy  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
any_auth/: app.py  build_app.py  config.py
any_auth/api/: aks.py  auth.py  console.py  health.py  oauth.py  oauth2.py  oidc.py  org_mem_rs.py  org_members.py  organizations.py  orgs.py  proj_aks.py  proj_invites.py  proj_mem_ras.py  proj_mems.py  projects.py  projs.py  public.py  ras.py  role_assignments.py  roles.py  root.py  route.py  users.py  verify.py
any_auth/backend/: _client.py  api_keys.py  invites.py  oauth2.py  oauth_client.py  organization_members.py  organizations.py  project_members.py  projects.py  resources.py  role_assignments.py  roles.py  settings.py  users.py
any_auth/middleware/: security.py
any_auth/types/: api_key.py  invite.py  oauth.py  oauth2.py  oauth2_scope.py  oauth_client.py  oidc.py  organization.py  organization_member.py  permission.py  permissions.yml  project.py  project_member.py  resource.py  role.py  role_assignment.py  roles.yml  user.py
any_auth/utils/: auth.py  exception_handlers.py  google_auth.py  id_token.py  jwt_manager.py  jwt_tokens.py  oauth2.py
docs/: index.md
docs/api/: index.md
docs/schemas/: index.md  relationshep_map.md  relationship_map.md
scripts/: openapi.json
scripts/get_started/: create_app_all_roles.py  create_app_platform_creator.py  ensure_app_all_roles.py  ensure_app_application_client.py  ensure_app_platform_creator.py  ensure_app_ropc_login_client.py  ensure_app_server_ropc_login_client.py
scripts/user_stories/: decode_jwt.py  example_client_app.py  user_register_and_login.py
tests/: conftest.py  test_init.py
tests/api/: test_aks.py  test_auth.py  test_auth_endpoints.py  test_evaluate.py  test_me.py  test_oauth_clients.py  test_org_mem_ras.py  test_org_mem_rs_endpoints.py  test_org_members_endpoints.py  test_org_mems.py  test_organization_endpoints.py  test_orgs.py  test_proj_aks.py  test_proj_aks_ras.py  test_proj_invites.py  test_proj_mem_ras.py  test_proj_members_endpoints.py  test_proj_mems.py  test_project_endpoints.py  test_projs.py  test_ras.py  test_role_assignments_endpoints.py  test_role_endpoints.py  test_roles.py  test_root.py  test_root_endpoints.py  test_user_endpoints.py  test_users.py  test_verify.py
tests/backend/: test_role.py  (+8 more)
(+36 files in other folders)
