[tool.poetry]
authors = ["Allen Chou <f1470891079@gmail.com>"]
description = "An Any-Auth, A Essential Auth Lib."
license = "MIT"
name = "any-auth"
packages = [{ include = "any_auth" }]
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
authlib = "*"
bcrypt = "*"
diskcache = "*"
fastapi = { extras = ["standard"], version = "*" }
itsdangerous = "*"
logging-bullet-train = "*"
pydantic = { extras = ["email", "timezone"], version = "*" }
pydantic-settings = "*"
pymongo = { extras = ["srv"], version = "*" }
python = ">=3.11,<4.0"
redis = "*"

[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
codepress = "*"
faker = "*"
isort = "*"
poetry-plugin-export = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-xdist = "*"
setuptools = "*"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
